# tmr_ros1_dev

./: .gitignore  README.md
tmr_description/: CMakeLists.txt  setup.py
tmr_description/launch/: tm5-900_view.launch  tmr_description_upload.launch  tmr_view.launch
tmr_description/meshes/tm25s/visual/: tm25s-base.stl
tmr_description/meshes/tm5-900/collision/: tm5-900_arm1_c.ply  tm5-900_arm2_c.ply  tm5_base_c.ply  tmr_100w_01_c.ply  tmr_100w_02_c.ply  (+4 more)
tmr_description/script/: modify_urdf.py  modify_urdf_node.py  modify_xacro_node.py
tmr_description/script/test/: macro.tm5-900-mdh.urdf.xacro
tmr_description/scripts/: modify_urdf.py  modify_xacro.py
tmr_description/src/urdf_modification/: __init__.py
tmr_description/xacro/: macro.materials.xacro  macro.tm12.urdf.xacro  macro.tm12s.urdf.xacro  macro.tm14.urdf.xacro  macro.tm14s.urdf.xacro  macro.tm25s.urdf.xacro  macro.tm5-700.urdf.xacro  macro.tm5-900-capsule.urdf.xacro  macro.tm5-900-compound.urdf.xacro  macro.tm5-900-mdh.urdf.xacro  macro.tm5-900-mesh.urdf.xacro  macro.tm5-900-pxcapsule.urdf.xacro  macro.tm5-900.urdf.xacro  macro.tm5s.urdf.xacro  macro.tm7s.urdf.xacro  tm12.urdf.xacro  tm12s.urdf.xacro  tm14.urdf.xacro  tm14s.urdf.xacro  tm25s.urdf.xacro  tm5-700.urdf.xacro  tm5-900.urdf.xacro  tm5s.urdf.xacro  tm7s.urdf.xacro
tmr_description/xacro/gripper/: on_robot_rg2.urdf.xacro
tmr_driver/: CMakeLists.txt  package.xml
tmr_driver/config/: controllers.yaml  tm5_controllers.yaml  tmr_controllers.yaml
tmr_driver/include/tmr_driver/: tmr_pose_conversion.h  tmr_ros_node.h  tmr_ros_robot_hw.h
tmr_driver/launch/: tm5-900_driver.launch  tmr_driver.launch  two_robot_example.launch
tmr_driver/src/: tmr_ros_node.cpp  tmr_ros_robot_hw.cpp  tmr_ros_sct_pub.cpp  tmr_ros_sct_srv.cpp  tmr_ros_service_sct.cpp  tmr_ros_service_svr.cpp  tmr_ros_svr_pub.cpp  tmr_ros_svr_srv.cpp  tmr_ros_topic_sct.cpp  tmr_ros_topic_svr.cpp  tmr_ros_traj_as.cpp
tmr_gazebo/: CMakeLists.txt  package.xml
tmr_gazebo/config/: sensor_kinect.yaml  tm5-900.srdf  tm5-900_demo.srdf
tmr_gazebo/controller/: arm_controllers_tm5.yaml
tmr_gazebo/launch/: moveit.rviz  tm5-900_demo_gazebo.launch  tm5-900_demo_moveit.launch  tm5-900_gazebo.launch  tm5-900_moveit.launch
tmr_gazebo/models/demo_stage/: model.config  model.sdf
tmr_gazebo/worlds/: demo_stage.world  test_stage.world
tmr_gazebo/xacro/: tm5-900.urdf.xacro  tm5-900_demo.urdf.xacro
tmr_moveit_config_tm5-900/: .setup_assistant  CMakeLists.txt  package.xml
tmr_moveit_config_tm5-900/config/: sensors_rgbd.yaml
tmr_moveit_config_tm5-900/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  tm5-900_demo.launch  tm5-900_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
tmr_msgs/: CMakeLists.txt  package.xml
tmr_msgs/msg/: FeedbackState.msg  PvtPoint.msg  StaResponse.msg  TmsctResponse.msg  TmsvrResponse.msg
tmr_msgs/srv/: SetPvtPoint.srv  SetTrajectory.srv
(+13 files in other folders)
